Added: Password field the Participant struct for later use with Auth
