# backend/docs/swagger.json
@@ -737,6 +737,10 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "min 8 characters"
                 }
             }
         },
